Add more hosts to properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.profiles.active=prod
-bidders=http://localhost:8081,http://localhost:8081
+bidders=http://localhost:8081,http://localhost:8082,http://localhost:8083
